Fix for defect #8
- horizontal scroll bar seen on the video pane

--- a/public/app/assets/css/style.css
+++ b/public/app/assets/css/style.css
@@ -772,7 +772,8 @@ video#bgvid {
     padding: 0;
     margin: 0;
     width: 100%;
-      overflow-y: hidden;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .bold-container {
